--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,18 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Jwt": {
+        "Key": "YourSuperSecretKey1234567890ThisIsAtLeast32BytesLong",
+        "Issuer": "YourIssuer",
+        "Audience": "YourAudience"
+    },
+
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=CollgeDb;Username=postgres;Password=1234;Include Error Detail=true"
     }
-  },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=CollgeDb;Username=postgres;Password=1234;Include Error Detail=true"
-  }
 }
