--- a/appsettings.json
+++ b/appsettings.json
@@ -8,5 +8,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=CollgeDb;Username=postgres;Password=1234;Include Error Detail=true"
+  },
+
+  "JwtSettings": {
+    "Key": "THIS IS A VERY SECURE SECRET KEY", // Replace with secure key
+    "Issuer": "LibraryAPI",
+    "Audience": "LibraryClient",
+    "DurationInMinutes": 60
   }
+
 }
