New backend code

--- a/appsettings.json
+++ b/appsettings.json
@@ -15,6 +15,17 @@
     "Issuer": "LibraryAPI",
     "Audience": "LibraryClient",
     "DurationInMinutes": 60
+  },
+
+  "EmailSettings": {
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "SenderName": "Book Verse",
+    "SenderEmail": "versebook050@gmail.com",
+    "Username": "versebook050@gmail.com",
+    "Password": "hrrhwkakyssojaaq"
   }
+
+
 
 }
