--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,13 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+
+  "App": {
+    //"BaseUrl": "http://100.64.230.248:5275",
+    //"BaseUrl": "http://192.168.254.82:5275",
+    //"BaseUrl": "http://192.168.1.91:5275",
+    "BaseUrl": "https://localhost:5100"
   }
+
 }
