--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -10,7 +10,8 @@
     //"BaseUrl": "http://100.64.230.248:5275",
     //"BaseUrl": "http://192.168.254.82:5275",
     //"BaseUrl": "http://192.168.1.91:5275",
-    "BaseUrl": "https://localhost:5100"
+    "BaseUrl": "http://localhost:5275"
   }
 
 }
+
